--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,8 @@
       [routerLink]="['/welcome']">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link">Product List</a>
+      <a class="nav-link"
+      [routerLink]="['/products']">Product List</a>
     </li>
     <li class="nav-item">
       <a class="nav-link">Add Product</a>
@@ -22,7 +23,8 @@
     </li>
     <li class="nav-item"
         *ngIf="!isLoggedIn">
-      <a class="nav-link">Log In</a>
+      <a class="nav-link"
+      [routerLink]="['/login']">Log In</a>
     </li>
     <li class="nav-item"
         *ngIf="isLoggedIn">
