--- a/src/app/products/product-edit/product-edit.component.html
+++ b/src/app/products/product-edit/product-edit.component.html
@@ -5,7 +5,7 @@
 
   <div class="card-body"
        *ngIf="product">
-    <form novalidate
+    <!-- <form novalidate
           #productForm="ngForm">
 
       <div class="form-group row">
@@ -93,7 +93,42 @@
           </button>
         </div>
       </div>
-    </form>
+    </form> -->
+    <div class="wizard">
+      <a [routerLink]="['info']">
+        Basic Information
+      </a>
+      <a [routerLink]="['tags']">
+        Search Tags
+      </a>
+    </div>
+
+    <router-outlet></router-outlet>
+
+    <div class="row mb-2">
+      <div class="col-md-4">
+        <button class="btn btn-primary mr-3"
+          style="width: 80px;"
+          type="button"
+          tittle="Save your entered data"
+          (click)="saveProduct()">
+          Save
+        </button>
+        <button class="btn btn-outline-secondary mr-3"
+          style="width: 80px;"
+          type="button"
+          tittle="Cancel your edits"
+          [routerLink] = "['/products']">
+          Cancel
+        </button>
+        <button class="btn btn-outline-warning"
+          style="width: 80px;"
+          type="button"
+          tittle="Delete this product"
+          (click)="deleteProduct()">
+          Delete
+        </button>
+    </div>
   </div>
 </div>
 
