--- a/src/app/products/product-edit/product-edit.component.html
+++ b/src/app/products/product-edit/product-edit.component.html
@@ -95,11 +95,15 @@
       </div>
     </form> -->
     <div class="wizard">
-      <a [routerLink]="['info']">
+      <a [routerLink]="['info']"
+        routerLinkActive="active">
         Basic Information
+        <span [ngClass]="{'fa fa-exclamation': !isValid('info')}"></span>
       </a>
-      <a [routerLink]="['tags']">
+      <a [routerLink]="['tags']"
+        routerLinkActive="active">
         Search Tags
+        <span [ngClass]="{'fa fa-exclamation': !isValid('tags')}"></span>
       </a>
     </div>
 
