--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<span class="fa fa-spinner spinner"
+  *ngIf="loading"></span>
 <nav class="navbar navbar-expand navbar-light bg-light">
   <a class="navbar-brand">{{pageTitle}}</a>
   <ul class="navbar-nav">
@@ -23,8 +25,15 @@
         *ngIf="isLoggedIn">
       <a class="nav-link">Welcome {{ userName }}</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link">Show Messages</a>
+    <li class="nav-item"
+        *ngIf="!isMessageDisplayed">
+        <a class="nav-link"
+          (click)="displayMessages()">Show Messages</a>
+    </li>
+    <li class="nav-item"
+        *ngIf="isMessageDisplayed">
+        <a class="nav-link"
+          (click)="hideMessages()">Hide Messages</a>
     </li>
     <li class="nav-item"
         *ngIf="!isLoggedIn">
@@ -38,7 +47,14 @@
     </li>
   </ul>
 </nav>
-<div class="container"
+<div class="container">
+  <div class="row">
+    <div class="col-md-10"
     [@slideInAnimation]="o.isActivated ? o.activatedRoute : ''">
-  <router-outlet #o="outlet"></router-outlet>
+      <router-outlet #o="outlet"></router-outlet>
+    </div>
+    <div class="col-md-2">
+      <router-outlet name="popup"></router-outlet>
+    </div>
+  </div>
 </div>
